Thu Dec  3 16:49:18 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (DROP_ABORT_TIME): Changed to 5 min
	from 10 seconds, so it doesn't abort while users
	have an ACTION_ASK menu up.

	* gtk/gtkdnd.c: Hide the icon window between sending a a 
	drop event to the destination and displaying the
	snapback animation, so that it doesn't hang around
	during ACTION_ASK.

Thu Dec  3 16:37:42 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (get_cell_style): Use GTK_STATE_INSENSITIVE
	for the foreground of cells for CLists in the insensitive
	state, instead of GTK_STATE_PRELIGHT.

Thu Dec  3 06:20:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c: moved checks upon focus setting from
 	gtk_window_real_set_focus to gtk_window_set_focus, so we don't
	emit the signal if unneccessary.

	* gtk/gtkwidget.c (gtk_widget_grab_focus): clear up the old focus
	containers when grabbing focus on a new widget. this is based on
	a patch from Alexis Mikhailov, submitted to gtk-list on 4 Nov 1998.

	* gtk/gtkclist.c (gtk_clist_focus_out): set CLIST_CHILD_HAS_FOCUS
	flag, so we take the buttons into consideration upon the next focus
	request.

	* gtk/gtkcontainer.c (gtk_container_set_focus_child): fixed an
 	assertment.

Wed Dec  2 17:45:21 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpixmap.c: Fixes for low-color displays and a slight
	  enhancement for true-color displays.

	* INSTALL:
	  README:
	  configure.in:
	  gtk+.spec:
	  docs/gtk-config.1: up to version 1.1.6

Wed Dec  2 01:36:49 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkfeatures.h.in: lets #define GTK_HAVE_FEATURES_1_1_6 before
	we release it this time

Wed Dec  2 01:39:02 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtknotebook.h: 
	* gtk/gtknotebook.c: s/gtk_notebook_nth_page/gtk_notebook_get_nth_page/.

	* incremented version number to 1.1.6 and made Gtk
 	dependant on GLib 1.1.6.

	* gtk/gtkwidget.h (struct _GtkRequisition): changed width and height