@@ -1,3 +1,15 @@
+Fri Dec  4 00:50:12 1998  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtkctree.c (gtk_ctree_export_to_gnode): fixed for-loop.
+
+	* gtk/gtkclist.c 
+	(gtk_clist_set_column_visibility)
+	(gtk_clist_column_titles_active)
+ 	(gtk_clist_column_titles_active)
+	(gtk_clist_column_title_passive)
+ 	(gtk_clist_column_title_active): few additional tests whether
+ 	column->button != NULL
+
 Thu Dec  3 16:49:18 1998  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkdnd.c (DROP_ABORT_TIME): Changed to 5 min
